--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^4.0.3
+  google_fonts: 6.1.0
   shared_preferences:
 
 dev_dependencies:
